appId: dev.noboil.org
---
- runFlow: onboarding-flow.yaml

- tapOn: "Members"
- waitForAnimationToEnd

- assertVisible: "Members"
- assertVisible: "Owner"

- tapOn:
    id: "inviteMemberButton"
- waitForAnimationToEnd
- assertVisible: "Invite Member"
- assertVisible: "Email address"
- assertVisible: "Send Invite"

- tapOn: "Cancel"
- waitForAnimationToEnd
- assertVisible: "Members"

- tapOn:
    id: "inviteMemberButton"
- waitForAnimationToEnd

- tapOn: "Email address"
- inputText: "invite-test@example.com"

- tapOn: "Send Invite"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "invite-test@example.com"
    timeout: 10000
    optional: true

- tapOn:
    id: "inviteMemberButton"
- waitForAnimationToEnd
- tapOn: "Email address"
- inputText: "second-invite@example.com"
- tapOn: "Send Invite"
- waitForAnimationToEnd
