appId: dev.noboil.org
---
- runFlow: onboarding-flow.yaml

- tapOn: "Members"
- waitForAnimationToEnd

- assertVisible: "Members"
- assertVisible: "Owner"

- tapOn:
    id: "inviteMemberButton"
- waitForAnimationToEnd
- assertVisible: "Invite Member"

- tapOn: "Email address"
- inputText: "pending-test@example.com"
- tapOn: "Send Invite"
- waitForAnimationToEnd

- extendedWaitUntil:
    visible: "Pending Invites"
    timeout: 10000
- assertVisible: "pending-test@example.com"

- tapOn:
    id: "inviteMemberButton"
- waitForAnimationToEnd
- tapOn: "Email address"
- inputText: "second-pending@example.com"
- tapOn: "Send Invite"
- waitForAnimationToEnd

- extendedWaitUntil:
    visible: "second-pending@example.com"
    timeout: 10000

- assertVisible: "Pending Invites"
- assertVisible: "pending-test@example.com"
- assertVisible: "second-pending@example.com"

- tapOn:
    text: "Revoke"
    index: 0
- waitForAnimationToEnd

- extendedWaitUntil:
    visible: "second-pending@example.com"
    timeout: 10000

- tapOn:
    text: "Revoke"
    index: 0
- waitForAnimationToEnd
