appId: dev.noboil.org
---
- runFlow: login.yaml

- assertVisible: "No Organizations"
- tapOn: "Get Started"
- waitForAnimationToEnd
- assertVisible: "Profile"

- tapOn: "Display Name"
- inputText: "Validation Test"

- tapOn: "Next"
- waitForAnimationToEnd
- assertVisible: "Organization"

- tapOn: "Organization Name"
- inputText: "Val Org"
- tapOn: "URL Slug"
- inputText: "val-org"

- tapOn: "Next"
- waitForAnimationToEnd
- assertVisible: "Appearance"

- tapOn: "Back"
- waitForAnimationToEnd
- assertVisible: "Organization"
- assertVisible: "Val Org"
- assertVisible: "val-org"

- tapOn: "Back"
- waitForAnimationToEnd
- assertVisible: "Profile"
- assertVisible: "Validation Test"

- tapOn: "Next"
- waitForAnimationToEnd
- assertVisible: "Organization"
- assertVisible: "Val Org"
- assertVisible: "val-org"

- tapOn: "Next"
- waitForAnimationToEnd
- assertVisible: "Appearance"

- tapOn: "Next"
- waitForAnimationToEnd
- assertVisible: "Preferences"
- assertVisible: "Enable Notifications"
- assertVisible: "Complete"

- tapOn: "Back"
- waitForAnimationToEnd
- assertVisible: "Appearance"

- tapOn: "Back"
- waitForAnimationToEnd
- assertVisible: "Organization"
- assertVisible: "Val Org"

- tapOn: "Back"
- waitForAnimationToEnd
- assertVisible: "Profile"
- assertVisible: "Validation Test"
